aws/scorpio/scorpio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scorpio
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app: scorpio
