aws/scorpio/scorpio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scorpio
spec:
  to:
    kind: Service
    name: scorpio
  tls:
    termination: edge
